move create{Entry,Attribute} to a separate file

--- a/views/3.html
+++ b/views/3.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>View</title>
 
+    <script src="../lib/entry.js"></script>
     <script src="../lib/resolver.js"></script>
     <script src="../locales/keys.js"></script>
 
