--- a/views/postAllEntries.html
+++ b/views/postAllEntries.html
@@ -15,7 +15,7 @@
       function receive(evt) {
         window.viewEntries = evt.data;
         for (var i = 0; i < len; i++) {
-          target.textContent = format(window.viewEntries[keys[i]]);
+          target.textContent = format(window.viewEntries[keys[i]]).value;
         }
         stop();
       }
