--- a/views/postFormattedEntity.html
+++ b/views/postFormattedEntity.html
@@ -13,14 +13,14 @@
       var counter;
 
       function receive(evt) {
-        target.textContent = evt.data;
+        target.textContent = evt.data.value;
         if (--counter === 0) {
           stop();
         }
       }
 
       function get(key) {
-        window.parent.postMessage(key, '*');
+        window.parent.postMessage({id: key, args: null}, '*');
       }
 
       function start() {
