--- a/views/postEachEntry.html
+++ b/views/postEachEntry.html
@@ -47,6 +47,6 @@
 
   <body>
     <button onclick="start()">start</button>
-    <p id="target"></p>
+    <span id="target"></span>
   </body>
 </html>
