--- a/views/postAllEntries.html
+++ b/views/postAllEntries.html
@@ -44,6 +44,6 @@
 
   <body>
     <button onclick="start()">start</button>
-    <p id="target"></p>
+    <span id="target"></span>
   </body>
 </html>
