--- a/views/postFormattedEntity.html
+++ b/views/postFormattedEntity.html
@@ -46,6 +46,6 @@
 
   <body>
     <button onclick="start()">start</button>
-    <p id="target"></p>
+    <span id="target"></span>
   </body>
 </html>
